# Hakaton_AI_agent

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  run (1).py  run.py
data/: questions.txt
data/TeX source/: JHEPmod.bst  main.bbl  main.tex
src/: __init__.py  answerer.py  check_submission.py  config.py  indexer.py  models.py  question_parser.py  retriever.py
src/agent/: __init__.py  components.py  graph.py  tools.py
src/loaders/: __init__.py  image_loader.py  pdf_loader.py  tex_loader.py
src/utils/: __init__.py  baseline.py  check_submission.py
